--- a/src/main/resources/org/example/kittyfy/Create-Playlist.fxml
+++ b/src/main/resources/org/example/kittyfy/Create-Playlist.fxml
@@ -8,9 +8,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="898.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.kittyfy.CreatePlaylistController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" BorderPane.alignment="CENTER">
+      <VBox prefHeight="616.0" prefWidth="581.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="playlistName" prefHeight="40.0" prefWidth="405.0" promptText="Playlist name">
+            <TextField fx:id="playlistName" prefHeight="40.0" prefWidth="410.0" promptText="Playlist name">
                <VBox.margin>
                   <Insets left="130.0" right="114.0" top="30.0" />
                </VBox.margin>
@@ -40,7 +40,7 @@
                <children>
                   <Button minHeight="40.0" mnemonicParsing="false" onAction="#cancel" prefHeight="40.0" prefWidth="95.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15;" text="Cancel ">
                      <font>
-                        <Font size="14.0" />
+                        <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                      </font>
                      <HBox.margin>
                         <Insets left="130.0" />
@@ -48,7 +48,7 @@
                   </Button>
                   <Button mnemonicParsing="false" onAction="#createPlaylist" prefHeight="40.0" prefWidth="95.0" style="-fx-text-fill: white; -fx-background-color: #000000; -fx-background-radius: 15;" text="Create">
                      <font>
-                        <Font size="14.0" />
+                        <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                      </font>
                      <HBox.margin>
                         <Insets bottom="30.0" left="215.0" />
@@ -64,13 +64,18 @@
          </children></VBox>
    </center>
    <right>
-      <ScrollPane prefHeight="616.0" prefWidth="248.0" BorderPane.alignment="CENTER">
-         <content>
-            <Label alignment="CENTER" prefHeight="102.0" prefWidth="246.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" text="Songs">
+      <VBox prefHeight="616.0" prefWidth="311.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" prefHeight="102.0" prefWidth="321.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" text="Songs">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="32.0" />
                </font>
             </Label>
-         </content></ScrollPane>
+            <ScrollPane prefHeight="520.0" prefWidth="248.0">
+               <content>
+                  <VBox fx:id="songsInPlaylist" prefHeight="522.0" prefWidth="295.0" />
+               </content>
+            </ScrollPane>
+         </children></VBox>
    </right>
 </BorderPane>
