--- a/src/main/resources/org/example/kittyfy/Edit-Playlist.fxml
+++ b/src/main/resources/org/example/kittyfy/Edit-Playlist.fxml
@@ -17,7 +17,7 @@
                 </TextField>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <ComboBox editable="true" prefHeight="40.0" prefWidth="343.0" promptText="Song/Artist">
+                        <ComboBox fx:id="searchbarPlaylist" editable="true" prefHeight="40.0" prefWidth="343.0" promptText="Song/Artist">
                             <HBox.margin>
                                 <Insets bottom="30.0" left="130.0" top="30.0" />
                             </HBox.margin></ComboBox>
@@ -31,7 +31,7 @@
                         </Button>
                     </children>
                 </HBox>
-                <ChoiceBox prefHeight="40.0" prefWidth="408.0">
+                <ChoiceBox fx:id="choosePictures" prefHeight="40.0" prefWidth="408.0">
                     <VBox.margin>
                         <Insets bottom="30.0" left="130.0" />
                     </VBox.margin>
@@ -46,17 +46,25 @@
                                 <Insets left="130.0" />
                             </HBox.margin>
                         </Button>
+                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="152.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" styleClass="ba" text="Delete Playlist">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="16.0" />
+                     </font>
+                  </Button>
                         <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="134.0" style="-fx-text-fill: orange; -fx-background-color: #000000; -fx-background-radius: 15;" text="Save Changes">
                             <font>
                                 <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                             </font>
                             <HBox.margin>
-                                <Insets bottom="30.0" left="215.0" />
+                                <Insets bottom="30.0" left="20.0" />
                             </HBox.margin>
                         </Button>
                     </children>
                 </HBox>
-                <ImageView fitHeight="288.0" fitWidth="405.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="EditPlaylistImage" fitHeight="288.0" fitWidth="405.0" pickOnBounds="true" preserveRatio="true">
                     <VBox.margin>
                         <Insets left="130.0" />
                     </VBox.margin>
