--- a/src/main/resources/org/example/kittyfy/Edit-Playlist.fxml
+++ b/src/main/resources/org/example/kittyfy/Edit-Playlist.fxml
@@ -10,7 +10,7 @@
     <center>
         <VBox prefHeight="616.0" prefWidth="581.0" style="-fx-background-color: linear-gradient(to bottom, #FF8000, #FFB366);" BorderPane.alignment="CENTER">
             <children>
-                <TextField prefHeight="40.0" prefWidth="410.0" promptText="Playlist name">
+                <TextField fx:id="playlistNameTextfield" prefHeight="40.0" prefWidth="410.0" promptText="Playlist name">
                     <VBox.margin>
                         <Insets left="130.0" right="114.0" top="30.0" />
                     </VBox.margin>
@@ -21,7 +21,7 @@
                             <HBox.margin>
                                 <Insets bottom="30.0" left="130.0" top="30.0" />
                             </HBox.margin></ComboBox>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="63.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" text="+">
+                        <Button mnemonicParsing="false" onAction="#addSongToPlaylist" prefHeight="40.0" prefWidth="63.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" text="+">
                             <HBox.margin>
                                 <Insets top="30.0" />
                             </HBox.margin>
@@ -38,7 +38,7 @@
                 </ChoiceBox>
                 <HBox prefHeight="71.0" prefWidth="650.0">
                     <children>
-                        <Button minHeight="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="95.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" text="Cancel ">
+                        <Button minHeight="40.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="40.0" prefWidth="95.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" text="Cancel ">
                             <font>
                                 <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                             </font>
@@ -46,7 +46,7 @@
                                 <Insets left="130.0" />
                             </HBox.margin>
                         </Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="152.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" styleClass="ba" text="Delete Playlist">
+                  <Button mnemonicParsing="false" onAction="#deletePlaylistButton" prefHeight="40.0" prefWidth="152.0" style="-fx-background-color: #000000; -fx-text-fill: orange; -fx-background-radius: 15;" styleClass="ba" text="Delete Playlist">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
@@ -54,7 +54,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                      </font>
                   </Button>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="134.0" style="-fx-text-fill: orange; -fx-background-color: #000000; -fx-background-radius: 15;" text="Save Changes">
+                        <Button mnemonicParsing="false" onAction="#saveChangesButton" prefHeight="40.0" prefWidth="134.0" style="-fx-text-fill: orange; -fx-background-color: #000000; -fx-background-radius: 15;" text="Save Changes">
                             <font>
                                 <Font name="Berlin Sans FB Demi Bold" size="16.0" />
                             </font>
@@ -64,7 +64,7 @@
                         </Button>
                     </children>
                 </HBox>
-                <ImageView fx:id="EditPlaylistImage" fitHeight="288.0" fitWidth="405.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="editPlaylistImage" fitHeight="288.0" fitWidth="405.0" pickOnBounds="true" preserveRatio="true">
                     <VBox.margin>
                         <Insets left="130.0" />
                     </VBox.margin>
@@ -81,7 +81,7 @@
                 </Label>
                 <ScrollPane prefHeight="520.0" prefWidth="248.0">
                     <content>
-                        <VBox prefHeight="522.0" prefWidth="295.0" />
+                        <VBox fx:id="songsInPlaylist" prefHeight="522.0" prefWidth="295.0" />
                     </content>
                 </ScrollPane>
             </children></VBox>
