--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -82,7 +82,7 @@
                         </Label>
                         <HBox prefHeight="18.0" prefWidth="355.0">
                            <children>
-                              <Label fx:id="currentDurationLabel" maxHeight="18.0" maxWidth="25.0" prefHeight="18.0" prefWidth="25.0" text="0:00">
+                              <Label fx:id="currentDurationLabel" maxHeight="18.0" maxWidth="30.0" prefHeight="18.0" prefWidth="30.0">
                                  <HBox.margin>
                                     <Insets left="20.0" />
                                  </HBox.margin>
@@ -92,7 +92,7 @@
                                     <Insets />
                                  </HBox.margin>
                               </ProgressBar>
-                              <Label fx:id="totalDurationLabel" maxHeight="18.0" maxWidth="25.0" prefHeight="18.0" prefWidth="25.0" />
+                              <Label fx:id="totalDurationLabel" maxHeight="18.0" maxWidth="30.0" prefHeight="18.0" prefWidth="30.0" />
                            </children>
                            <VBox.margin>
                               <Insets />
