--- a/src/main/resources/org/example/kittyfy/hello-view.fxml
+++ b/src/main/resources/org/example/kittyfy/hello-view.fxml
@@ -34,16 +34,19 @@
                         <Insets top="20.0" />
                     </VBox.margin>
                 </HBox>
-            <Label fx:id="PlaylistTitleAndDuration" alignment="CENTER" prefHeight="38.0" prefWidth="802.0" textAlignment="CENTER">
+            <Label fx:id="PlaylistTitleAndDuration" alignment="CENTER" prefHeight="38.0" prefWidth="658.0" textAlignment="CENTER">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="16.0" />
-               </font></Label>
-                <ScrollPane fx:id="songsPane" prefHeight="258.0" prefWidth="650.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
+               </font>
                <VBox.margin>
-                  <Insets left="20.0" right="53.0" />
+                  <Insets left="26.0" />
+               </VBox.margin></Label>
+                <ScrollPane fx:id="songsPane" prefHeight="258.0" prefWidth="658.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
+               <VBox.margin>
+                  <Insets left="26.0" right="60.0" />
                </VBox.margin>
                <content>
-                  <VBox fx:id="songsVbox" prefHeight="304.0" prefWidth="638.0" />
+                  <VBox fx:id="songsVbox" prefHeight="304.0" prefWidth="642.0" />
                </content>
                 </ScrollPane>
                 <HBox alignment="CENTER" prefHeight="230.0" prefWidth="674.0">
@@ -170,24 +173,30 @@
     <right>
         <VBox prefHeight="616.0" prefWidth="207.0" BorderPane.alignment="CENTER">
             <children>
-                <Label alignment="CENTER" prefHeight="51.0" prefWidth="188.0" style="-fx-text-fill: black; -fx-font-size: 24px; -fx-font-weight: bold; -fx-font-family: 'Berlin Sans FB Demi';" text="Purrlists" textAlignment="CENTER">
+                <Label alignment="CENTER" prefHeight="51.0" prefWidth="181.0" style="-fx-text-fill: black; -fx-font-size: 24px; -fx-font-weight: bold; -fx-font-family: 'Berlin Sans FB Demi';" text="Purrlists" textAlignment="CENTER">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                </font></Label>
                 <ScrollPane fx:id="playlistPane" prefHeight="510.0" prefWidth="414.0" style="-fx-background-color: #FF8000; -fx-background-radius: 15;">
                <VBox.margin>
-                  <Insets right="20.0" />
+                  <Insets right="26.0" />
                </VBox.margin>
                <content>
-                  <VBox fx:id="vBoxPlaylists" prefHeight="532.0" prefWidth="171.0" />
+                  <VBox fx:id="vBoxPlaylists" prefHeight="532.0" prefWidth="165.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets></VBox>
                </content>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
                 </ScrollPane>
                 <Button mnemonicParsing="false" onAction="#createPlaylist" prefHeight="40.0" prefWidth="188.0" style="-fx-background-color: #000000; -fx-text-fill: white; -fx-background-radius: 15; -fx-text-fill: orange;" text="Create Purrlist" textAlignment="CENTER" textFill="WHITE">
                     <font>
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                     </font>
                <VBox.margin>
-                  <Insets right="20.0" />
+                  <Insets right="26.0" />
                </VBox.margin>
                <cursor>
                   <Cursor fx:constant="HAND" />
